bases/managers/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: tcp
      port: 8686
